--- a/src/public/login.html
+++ b/src/public/login.html
@@ -6,7 +6,16 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-    
+    <form action="/login" method="POST" id="form">
+        <h2>Login</h2>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+        <label for="user_password">Contraseña:</label><br>
+        <input type="password" id="user_password" name="user_password" required><br><br>
+        <button type="submit">Iniciar sesión</button>
+    </form>
+
+    <script type="module" src="js/login-app.js"></script>
+
 </body>
 </html>
