--- a/src/public/register.html
+++ b/src/public/register.html
@@ -6,8 +6,23 @@
     <title>Register</title>
 </head>
 <body>
-    <h1>Register</h1>
+    <form action="/register" method="POST">
+        <h2>Registro</h2>
+        <label for="first_name">Nombre:</label><br>
+        <input type="text" id="first_name" name="first_name" required><br><br>
 
-    
+        <label for="last_name">Apellido:</label><br>
+        <input type="text" id="last_name" name="last_name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="user_password">Contraseña:</label><br>
+        <input type="password" id="user_password" name="user_password" required><br><br>
+
+        <button type="submit">Registrarse</button>
+    </form>
+
+  
 </body>
 </html>
